# WP3

./: README.md
IDEA-DualReadout/: DRTubesDistributions.C  SumCrystalsInformation.C  emResolutionFit.C  jetResolution.C  piPunchThroughResolutionFit.C  piResolutionFit.C  runEmCalibrationAnalysis.C  runHadCalibrationAnalysis.C
IDEA-DualReadout/jetanalysis/: CMakeLists.txt  jetResolution.cpp
